[package]
name = "rustcatch"
version = "0.1.0"
authors = ["Pavel Gulaev <xzdes@yandex.ru>"]
license = "MIT"
edition = "2021"

[lib]
name = "rustcatch"
crate-type = ["cdylib"]

[dependencies]
# Современная библиотека Neon
neon = "1.0.0" 
rdev = "0.5.3"
once_cell = "1.19.0"

[build-dependencies]
# Инструмент для сборки. Его версия НЕ совпадает с основной, и это нормально!
neon-build = "0.10.1"